fixed modal that was overflowing scroll bar

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,1 @@
 
-
-html {
-  height: 100%;
-}
-body {
-  min-height: 100%;
-}
